# tools

./: .gitignore  README.md
BacklogTaskViewer/: .env.example  .gitignore  CLAUDE.md  README.md  debug_tasks.py  pyproject.toml  run.ps1  run.sh  test_api.py  test_multi_user.py  test_ui.py
BacklogTaskViewer/config/: settings.json
BacklogTaskViewer/docs/: FILTER_REQUIREMENTS.md  IMPLEMENTATION_REPORT.md  MULTI_USER_FEATURE.md  SPECIFICATION.md
BacklogTaskViewer/scripts/: analyze_task_data.py
BacklogTaskViewer/src/: __init__.py  main.py
BacklogTaskViewer/src/core/: __init__.py  backlog_client.py  cache_manager.py  settings_manager.py  task_manager.py
BacklogTaskViewer/src/models/: __init__.py  project.py  settings.py  task.py
BacklogTaskViewer/src/ui/: __init__.py  components.py  main_window.py  settings_dialog.py  task_list_widget.py
BacklogTaskViewer/src/utils/: __init__.py
BacklogTaskViewer/tests/: __init__.py  test_settings.py  test_task.py  test_task_manager.py
CSV2XLSX/: .gitignore  GEMINI.md  README.md  build.py  csv2xlsx_cli.bat  csv2xlsx_gui.bat  csv2xlsx_modern.bat  quick_build.bat  requirements.txt  setup.py  tasks.md
CSV2XLSX/docs/: WINDOWS_BUILD_GUIDE.md  user_manual.md
CSV2XLSX/src/: cli.py  converter.py  main.py
CSV2XLSX/tests/: test_data_sjis.csv  test_data_sjis_test_data_sjis.csv  test_integration.py
CSV2XLSX_v2/: .gitignore  CHANGELOG.md  CLAUDE.md  GITHUB_RELEASE_INSTRUCTIONS.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  build.bat  build.py  github_release_template.md  installer.iss  integration_test.py  prepare_release.py  pyproject.toml  release_info.json  requirements.txt
CSV2XLSX_v2/.claude/: settings.local.json
CSV2XLSX_v2/release/: USER_GUIDE.md
CSV2XLSX_v2/release/sample_data/: sample.csv
CSV2XLSX_v2/src/: __init__.py  converter.py  main.py
CSV2XLSX_v2/src/ui/: __init__.py  components.py  main_window.py
CSV2XLSX_v2/src/utils/: file_handler.py  validators.py
CSV2XLSX_v2/tests/: test_converter.py  test_validators.py
CSV2XLSX_v3/: .gitignore  BUG_FIX_REPORT.md  BUILD_NOTES.md  BUILD_READY.md  CHANGELOG.md  CLAUDE.md  DEBUG_REPORT.md  README.md  THREAD_SAFE_FIX_REPORT.md  V2からV3への変更点.md  csv2xlsx_pyside6.spec  installer.iss  mypy.ini  pyproject.toml
CSV2XLSX_v3/.claude/: settings.local.json
CSV2XLSX_v3/.serena/: project.yml
CSV2XLSX_v3/config/: default.json
CSV2XLSX_v3/docs/: PROJECT_STRUCTURE.md  README.md  USER_GUIDE.md  development.md
CSV2XLSX_v3/docs/development/: ANALYSIS_REPORT.md
CSV2XLSX_v3/docs/releases/: v2.1.0.json
CSV2XLSX_v3/packaging/: installer.iss
CSV2XLSX_v3/scripts/: build.bat  build.py  generate_test_data.py  prepare_release.py
CSV2XLSX_v3/src/: __init__.py  main_qt6.py
CSV2XLSX_v3/src/converter/: __init__.py  csv_encoding.py  csv_to_excel.py  data_types.py  encoding.py  excel_to_csv.py  styles.py
CSV2XLSX_v3/src/core/: __init__.py  conversion_controller.py  file_manager.py  progress_tracker.py  settings_manager.py
CSV2XLSX_v3/src/ui_qt6/: __init__.py  main_window.py
CSV2XLSX_v3/src/ui_qt6/dialogs/: __init__.py  about_dialog.py  settings_dialog.py
CSV2XLSX_v3/src/ui_qt6/models/: __init__.py  file_list_model.py
CSV2XLSX_v3/src/ui_qt6/resources/: styles.qss
CSV2XLSX_v3/src/ui_qt6/widgets/: __init__.py  compact_settings_panel.py  file_table.py  log_viewer.py  progress_widget.py  settings_panel.py
CSV2XLSX_v3/src/ui_qt6/workers/: __init__.py  file_loader_worker.py
CSV2XLSX_v3/src/utils/: file_handler.py  validators.py
CSV2XLSX_v3/tests/: debug_app.py  debug_file_access.py  debug_project_structure.py  test_conversion_performance.py  test_converter.py  test_file_manager_integration.py  test_output_folder_feature.py  test_thread_safe_ui.py  test_validators.py  test_version_display.py
PDF2PNG/: 1_image_PDF2IMG.py  BUILD_QUICK_GUIDE.md  PDF2PNG_仕様書.md  PDF2PPTX.py  PDF2PPTX.spec  PROJECT_STRUCTURE.md  README.md  activate手順  build.spec  build_windows.spec  main.py  pdf_to_pptx_gui copy.py  pyproject.toml  requirements.txt  reset.py
PDF2PNG/.github/: dependabot.yml
PDF2PNG/.serena/: project.yml
PDF2PNG/docs/development/: ANALYSIS_REPORT.md  REFACTORING_REPORT.md  TASK_ROADMAP.md
PDF2PNG/docs/windows/: WINDOWS_BUILD_GUIDE.md  WINDOWS_COMPILATION_CHECKLIST.md  WINDOWS_TROUBLESHOOTING.md
PDF2PNG/legacy_original/: PDFToolkit.spec  migrate_to_refactored.py
PDF2PNG/sample_outputs/: Slides_from_PDF_direct.pptx
PDF2PNG/scripts/: create_windows_package.ps1
PDF2PNG/security/: README.md  SECURITY_AUDIT_REPORT.md  dependency_security_policy.md  monitor_security.py  validate_dependencies.py
PDF2PNG/src/: __init__.py  config.py
PDF2PNG/src/core/: __init__.py  pdf_processor.py
PDF2PNG/src/ui/: __init__.py  converters.py  main_window.py
PDF2PNG/src/utils/: __init__.py  error_handling.py  path_utils.py
PDF2PNG/tests/: __init__.py  test_pdf_processor.py
PDF2PPTX/: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  build.rs
PDF2PPTX/src/: app.rs  config.rs  drop_handler.rs  error.rs  main.rs
PDF2PPTX/src/convert/: mod.rs  pdf_render.rs  pptx_builder.rs  units.rs
QRcode-gen/: .gitignore  Architecture.md  GUIDesign.md  TDD_Plan.md
QRcode-gen/.github/: copilot-instructioons.md
QRcode-gen/qr_k100_gui/: .gitignore  Cargo.toml  README.md
QRcode-gen/qr_k100_gui/src/: app.rs  lib.rs  main.rs
QRcode-gen/qr_k100_gui/src/core/: mod.rs  qr_engine.rs
QRcode-gen/qr_k100_gui/tests/: eps_test.rs  png_test.rs  report_test.rs
old/CSV2XLSX/: .gitignore  README_MODERN.md  csv2xlsx.spec  install_modern.bat  output.xlsx  requirements_modern.txt  仕様書.md
old/CSV2XLSX/docs/: BUILD_CHECKLIST.md
old/CSV2XLSX/src/: animations.py  main.py  modern_gui.py
old/CSV2XLSX/tests/: test_converter.py  test_data_sjis.xlsx
old/PDF2PNG/: 2_ppt_PAF2PPT.py  PDF2PNG - ショートカット.lnk  Slides_from_Images.pptx
slides/: JMDC2022_16対9(標準)_v1.1.pptx  JMDC2022_16対9(標準)_ルールブック_v1.2.pptx  Template .pptx
