# シンプルで実用的なCSV-Excel変換ツール
# 設計方針: 最小構成、段階的開発 、依存関係の最小化
[project]
name = "csv-excel-converter"
version = "3.0.0"

description = "CSV ⇄ Excel converter with modern Qt UI"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "chardet>=5.0.0",
    "PySide6>=6.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-qt>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

# 除外するディレクトリ
exclude = [".git", ".venv", "__pycache__", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# 有効化するルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "PIE", # flake8-pie
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
]

# 無視するルール
ignore = [
    "E501",   # line-too-long (blackが処理)
    "B008",   # function-call-in-default-argument
    "B904",   # raise-without-from-inside-except
    "E402",   # module-level-import-not-at-top-of-file (sys.path操作が必要)
    "N802",   # function-name-should-be-lowercase (PySide6のイベントハンドラ)
    "N815",   # variable-in-class-scope-should-not-be-mixedcase (PySide6のSignal)
    "PTH123", # builtin-open (Path.open()への移行は段階的に)
    "RET503", # missing-explicit-return (テストコードの一部)
]

# ファイルごとに無視するルール
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # unused-import
"tests/**/*.py" = [
    "S101",
    "E712",
    "F841",
] # assert-used, comparison-to-true, unused-variable

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
force-sort-within-sections = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

# サードパーティライブラリの型チェックを緩和
[[tool.mypy.overrides]]
module = ["pandas.*", "openpyxl.*", "chardet.*", "PySide6.*"]
ignore_missing_imports = true
